Update nb-NO l10n

--- a/nb-NO/browser/chrome/browser/places/places.properties
+++ b/nb-NO/browser/chrome/browser/places/places.properties
@@ -82,7 +82,7 @@ searchCurrentDefault=Søk i «%S»
 findInPrefix=Søk i «%S» …
 
 tabs.openWarningTitle=Bekreft åpning
-tabs.openWarningMultipleBranded=Du vil nå åpne %S faner.  Dette kan gjøre at %S bruker lang tid på å laste sidene.  Er du sikker på at du vil fortsette?
+tabs.openWarningMultipleBranded=Du åpner nå %S faner.  Dette kan gjøre at %S bruker lang tid på å laste sidene.  Er du sikker på at du vil fortsette?
 tabs.openButtonMultiple=Åpne faner
 tabs.openWarningPromptMeBranded=Advar når åpning av flere faner kan gjøre %S treg
 
