--- a/nb-NO/mail/chrome/messenger/filter.properties
+++ b/nb-NO/mail/chrome/messenger/filter.properties
@@ -38,7 +38,7 @@ filterAction4=markert som lest
 filterAction5=tråd avsluttet
 filterAction6=tråd overvåket
 filterAction7=stjerne
-filterAction8=tagget
+filterAction8=med etikett
 filterAction9=besvart
 filterAction10=videresendt
 filterAction11=utføring stoppet
