--- a/nb-NO/suite/chrome/browser/pageInfo.properties
+++ b/nb-NO/suite/chrome/browser/pageInfo.properties
@@ -55,12 +55,12 @@ mediaEmbed=Embed
 mediaLink=Ikon
 mediaInput=Inputt
 mediaFileSize=%S KB
-mediaSize=%S px × %S px
+mediaSize=%S px \u00D7 %S px
 mediaSelectFolder=Velg en mappe for å lagre bildene
 mediaBlockImage=Blokker bilder fra %S
 
 generalQuirksMode=Særmodus
-generalStrictMode=Vanlig modus
+generalStrictMode=Standardmodus
 generalNotCached=Uten hurtiglager
 generalDiskCache=Hurtiglager på disk
 generalMemoryCache=Hurtiglager i minnet
