--- a/nb-NO/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/nb-NO/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -42,9 +42,9 @@
 #
 emptyListName=Du må skrive inn et listenavn.
 lastFirstFormat=%S, %S
-firstLastFormat=%S %S  
+firstLastFormat=%S %S
 
-newContactTitle=Nytt kort for %S
+newContactTitle=Nytt kort
 # %S will be the card's display name
 newContactTitleWithDisplayName=Nytt kort for %S
 editContactTitle=Rediger kort
@@ -75,7 +75,7 @@ confirmDeleteListsAndContacts=Er du sikker på at du vil slette de valgte korten
 confirmDeleteMailingLists=Er du sikker på at du vil slette den valgte e-postlista?
 
 propertyPrimaryEmail=E-post
-propertyListName=Listenavn\:
+propertyListName=Listenavn
 propertySecondaryEmail=E-post (annen)
 propertyScreenName=Skjermnavn
 propertyNickname=Kallenavn
@@ -96,7 +96,7 @@ propertyCustom4=Egendefinert 4
 ## see http://developer.mozilla.org/en/Core_JavaScript_1.5_Reference/Global_Objects/Date/toLocaleFormat
 ## %B is the month's localized name and %e is the day of the month [1-31]
 ## Separators (a space, dash, etc.) can be used
-dateformat=%B %e
+dateformat=%e. %B
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -126,8 +126,8 @@ ldap_2.servers.oe.description=OE-kontakter
 ldap_2.servers.osx.description=Mac OS X adressebok
 
 # status bar stuff
-## LOCALIZATION NOTE (totalCardStatus): 
-## %1$S is address book name, %2$S is card count
+## LOCALIZATION NOTE (totalContactStatus):
+## %1$S is address book name, %2$S is contact count
 totalContactStatus=Antall kort i %1$S: %2$S
 ## LOCALIZATION NOTE (matchesFound):  do not localize %S
 noMatchFound=Ingen treff funnet
@@ -181,5 +181,5 @@ corruptMabFileTitle=Korruptert adressebokfil
 corruptMabFileAlert=En av adressebokfilene (%1$S) kunne ikke bli lest. En ny fil %2$S vil bli opprettet, og en sikkerhetskopi av den gamle filen, kalt %3$S, vil bli opprettet i den samme mappen.
 
 # For locked .mab files
-lockedMabFileTitle=Klarte ikke laste adressebok-filen
-lockedMabFileAlert=Klarte ikke laste adressebok-filen %S. Det er mulig den ikke er skrivbar, eller er låst av et annet program. Prøv igjen senere.
+lockedMabFileTitle=Klarte ikke lese adresseboken
+lockedMabFileAlert=Klarte ikke lese adresseboken %S. Det er mulig at filen ikke er skrivbar, eller er låst av et annet program. Prøv igjen senere.
