--- a/nb-NO/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -50,10 +50,10 @@
 12503=Klarte ikke lagre meldingen som utkast.
 
 ## @name NS_MSG_LOAD_ATTACHMNTS
-12504=Laster inn vedlegg ...
+12504=Laster inn vedlegg …
 
 ## @name NS_MSG_LOAD_ATTACHMNT
-12505=Laster inn vedlegg ...
+12505=Laster inn vedlegg …
 
 ## @name NS_MSG_COULDNT_OPEN_FCC_FOLDER
 12506=Klarte ikke åpne mappen for sendte e-post. Kontroller at E-postinnstillingene er korrekte.
@@ -62,10 +62,10 @@
 12507=Kan ikke sende melding til flere nyhetsgruppetjenere. Prøv igjen.
 
 ## @name NS_MSG_ASSEMB_DONE_MSG
-12508=Setter sammen melding ... Ferdig
+12508=Setter sammen melding … Ferdig
 
 ## @name NS_MSG_ASSEMBLING_MSG
-12509=Setter sammen melding ...
+12509=Setter sammen melding …
 
 ## @name NS_MSG_NO_SENDER
 12510=Ingen avsender er angitt. Fyll in e-postadressen i kontoinnstillingene til E-post/Nyhetsgrupper.
@@ -95,10 +95,10 @@
 12520=Sending av melding feilet.
 
 ## @name SMTP_DELIV_MAIL
-12521=Leverer e-post ...
+12521=Leverer e-post …
 
 ## @name SMTP_MESSAGE_SENT_WAITING_MAIL_REPLY
-12522=Melding er sendt, venter på svar ...
+12522=Melding er sendt, venter på svar …
 
 ## @name SMTP_PROGRESS_MAILSENT
 12523=E-post sendt
@@ -131,19 +131,19 @@
 12533=Klarte ikke inkludere filen %.200s i meldingen. Vil du likevel lagre meldingen uten denne filen?
 
 ## @name NS_MSG_ASSEMBLING_MESSAGE
-12534=Samler meldingsinformasjon ...
+12534=Samler meldingsinformasjon …
 
 ## @name NS_MSG_GATHERING_ATTACHMENT
-12535=Legger ved %s ...
+12535=Legger ved %s …
 
 ## @name NS_MSG_CREATING_MESSAGE
-12536=Oppretter e-postmelding ...
+12536=Oppretter e-postmelding …
 
 ## @name NS_MSG_FAILURE_ON_OBJ_EMBED_WHILE_SENDING
 12537=Det oppstod et problem med å inkludere filen %.200s i meldingen. Vil du fortsette å sende meldingen uten denne filen?
 
 ## @name NS_MSG_START_COPY_MESSAGE
-12538=Kopierer melding til mappen %S ...
+12538=Kopierer melding til mappen %S …
 
 ## @name NS_MSG_START_COPY_MESSAGE_COMPLETE
 12539=Kopiering ferdig.
@@ -161,19 +161,19 @@
 12544=Skriv inn passordet for %S på %S\:
 
 ## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Kobler til tjener ...
+12545=Kobler til tjener …
 
 ## @name NS_MSG_SENDING_MESSAGE
-12550=Sender melding ...
+12550=Sender melding …
 
 ## @name NS_MSG_POSTING_MESSAGE
-12551=Poster melding ...
+12551=Poster melding …
 
 ## @name NS_ERROR_NNTP_NO_CROSS_POSTING
 12554=Du kan bare sende meldinger til en nyhetsgruppetjener om gangen.
 
 ## @name NS_MSG_CANCELLING
-12555=Avbryter ...
+12555=Avbryter …
 
 ## @name NS_MSG_SEND_ERROR_TITLE
 12556=Feil i melding
@@ -301,7 +301,7 @@ initErrorDlogMessage=En feil oppstod ved oppretting av meldingsvindu. Prøv igje
 ## Strings used by Save as Draft/Template dialog
 SaveDialogTitle=Lagrer melding
 ## LOCALIZATION NOTE (SaveDialogMsg): %1$S is folder name, %2$S is host name
-SaveDialogMsg=Meldingen er lagret i mappen %1$S under %2$S
+SaveDialogMsg=Meldingen er lagret i mappen %1$S under %2$S.
 CheckMsg=Ikke vis denne dialogen igjen.
 
 ## Strings used by prompt when Quitting while in progress
