--- a/nb-NO/suite/chrome/mailnews/filter.properties
+++ b/nb-NO/suite/chrome/mailnews/filter.properties
@@ -20,7 +20,7 @@ cannotEnableFilter=Dette filteret ble trolig opprettet av en fremtidig versjon a
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
 # %1$S=author, %2$S=subject, %3$S=date
-junkLogDetectStr=Oppdaget reklame fra %1$S - %2$S på %3$S
+junkLogDetectStr=Oppdaget uønsket e-post fra %1$S - %2$S på %3$S
 # LOCALIZATION NOTE(logMoveStr)
 # %1$S=message id, %2$S=folder URI
 logMoveStr=flyttet meldingsid = %1$S til %2$S
@@ -36,15 +36,15 @@ filterAction3=slettet
 filterAction4=markert som lest
 filterAction5=tråd avsluttet
 filterAction6=tråd overvåket
-filterAction7=stjerne
-filterAction8=med merkelapp
+filterAction7=flagg
+filterAction8=med etikett
 filterAction9=besvart
 filterAction10=videresendt
 filterAction11=utføring stoppet
 filterAction12=slettet fra POP3-tjener
 filterAction13=forlatt på POP3-tjener
-filterAction14=reklamepost-poeng
+filterAction14=uønsket-poeng
 filterAction15=meldingstekst hentet fra POP3-tjener
 filterAction16=kopiert til mappe
-filterAction17=med merkelapp
+filterAction17=med etikett
 filterAction18=ignorert undertråd
