--- a/nb-NO/suite/chrome/mailnews/importMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/importMsgs.properties
@@ -297,11 +297,11 @@ ImportSettingsSuccess=Innstillinger importert fra %S
 
 #Error string for mail import
 ImportMailBadModule=Klarte ikke laste inn importmodulen for e-post
-ImportMailNotFound=Klarte ikke finne e-posten som skal importeres.  Kontroller at e-postprogrammet er korrekt installert på datamaskinen.
+ImportMailNotFound=Klarte ikke finne e-post som skulle importeres. Kontroller at e-postprogrammet er korrekt installert på denne maskinen.
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportMailFailed=En feil oppstod under import av e-post fra %S
+ImportMailFailed=En feil oppstod under importering av e-post fra %S
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportMailSuccess=E-post ble importert fra %S
+ImportMailSuccess=E-post er importert fra %S
 
 # Error string for address import
 ImportAddressBadModule=Klarte ikke laste inn adressebokens importmodul.
@@ -313,13 +313,13 @@ ImportAddressFailed=En feil oppstod under importering av adresser fra %S.
 ImportAddressSuccess=Adresser ble importert fra %S.
 
 # Error string for filters import
-ImportFiltersBadModule=Klarte ikke å laste inn filterimportmodul.
+ImportFiltersBadModule=Klarte ikke laste filterimportmodul.
 # LOCALIZATION NOTE : The %S will get replaced by the name of the import module.
-ImportFiltersFailed=En feil oppstod under import av filtre fra %S.
+ImportFiltersFailed=En feil oppstod ved import av filtre fra %S.
 # LOCALIZATION NOTE : The %S will get replaced by the name of the import module.
 ImportFiltersSuccess=Filtre er importert fra %S.
 # LOCALIZATION NOTE : The %S will get replaced by the name of the import module.
-ImportFiltersPartial=Filtre ble delvis importert fra %S.  Advarsler nedenfor:
+ImportFiltersPartial=Filtre er delvis importert fra %S.  Advarsler er nedenfor:
 
 #Progress strings
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
@@ -328,7 +328,7 @@ MailProgressMeterText=Konverterer postkasser fra %S
 AddrProgressMeterText=Konverterer adressebøker fra %S
 
 #Import file dialog strings
-ImportSelectSettings=Velg innstilling-fil
+ImportSelectSettings=Velg innstillingsfil
 ImportSelectMailDir=Velg e-postmappe
 ImportSelectAddrDir=Velg adressebokmappe
 ImportSelectAddrFile=Velg adressebokfil
