--- a/nb-NO/suite/chrome/mailnews/messenger.properties
+++ b/nb-NO/suite/chrome/mailnews/messenger.properties
@@ -55,7 +55,7 @@ titleNewsPreHost=på
 titleMailPreHost=for
 replyToSender=Svar til avsender
 reply=Svar
-EMLFiles=E-postfiler (*.eml)
+EMLFiles=E-postfiler
 OpenEMLFiles=Åpne melding
 # LOCALIZATION NOTE(defaultSaveMessageAsFileName): Do not translate ".eml" 
 # in the line below.  Also, the complete file name should 8.3
@@ -90,7 +90,7 @@ compactingFolder=Komprimerer mappen %S …
 doneCompacting=Komprimering fullført
 autoCompactAllFoldersTitle=Komprimere mapper
 autoCompactAllFolders=Vil du komprimere alle lokale of frakoblede mapper for å spare diskplass?
-autoCompactAlwaysAskCheckbox=Spør meg alltid før mapper komprimeres automatisk
+autoCompactAlwaysAskCheckbox=Alltid spør før mapper automatisk komprimeres
 compactNowButton=Komprimer &nå
 
 confirmFolderDeletionForFilter=Sletting av mappen «%S» vil slå av filtrene som er tilknyttet. Er du sikker på at du vil slette mappen?
@@ -100,26 +100,26 @@ filterFolderDeniedLocked=Klarte ikke filtrere meldingen til mappen «%S» fordi 
 parsingFolderFailed=Klarte ikke åpne mappen %S fordi den blir brukt av en annen operasjon. Vent til den operasjonen fullføres, og velg mappen på nytt.
 deletingMsgsFailed=Kunne ikke slette meldinger i mappen %S fordi den blir brukt av en annen operasjon. Vent til den operasjonen er ferdig og prøv igjen.
 alertFilterCheckbox=Ikke advar meg igjen
-compactFolderDeniedLock=Mappen «%S» kunne ikke bli komprimert fordi en annen operasjon foregår allerede. Prøv igjen senere.
-compactFolderWriteFailed=Mappen«%S» kunne ikke bli komprimert fordi skriving til mappen feilet. Kontroller at du har nok diskplass, og at du har skrivetilgang til filsystemet, og prøv igjen.
+compactFolderDeniedLock=Klarte ikke komprimere mappen «%S» fordi en annen operasjon foregår allerede. Prøv igjen senere.
+compactFolderWriteFailed=Klarte ikke komprimere mappen «%S» fordi skriving til mappen feilet. Kontroller at du har nok diskplass, og at du har skrivetilgang til filsystemet, og prøv igjen.
 filterFolderWriteFailed=Klarte ikke filtrere denne meldingen til mappen «%S» fordi skriving til mappen feilet. Kontroller at du har nok diskplass, og at du har tillatelse til å skrive til filsystemet, og prøv igjen.
 copyMsgWriteFailed=Meldingen kunne ikke bli flyttet eller kopiert til mappen «%S» fordi skriving til mappen feilet. For å få mer diskplass, så velg «Tøm søppel» fra Fil-menyen. Også prøv å komprimer mapper.
 cantMoveMsgWOBodyOffline=Du kan ikke flytte eller kopiere meldinger som ikke var lastet ned for frakoblet bruk mens du er i frakoblet tilstand. Fra E-postvinduet, åpne Fil-menyen, velg Frakoblet, og velg Arbeid tilkoblet og prøv igjen.
 operationFailedFolderBusy=Operasjonen feilet fordi en annen operasjon bruker mappen. Vent til den andre operasjonen fullfører, og prøv igjen.
 folderRenameFailed=Klarte ikke endre navn på mappen. Sannsynligvis blir mappen lest akkurat nå, eller så er navnet ikke et gyldig mappenavn.
-# LOCALIZATION NOTES(verboseFolderFormat): %1$S is folder name, %2$S is server name
+# LOCALIZATION NOTE(verboseFolderFormat): %1$S is folder name, %2$S is server name
 verboseFolderFormat=%1$S i %2$S
-# LOCALIZATION NOTES(filterFolderTruncateFailed): %1$S is replaced by the folder name, %2$S is replaced by the brandShortName
-filterFolderTruncateFailed=Det oppstod en feil under pakking av innboksen, etter å ha flyttet en melding til mappen '%S'. Du kan måtte avslutte Mozilla og slette INBOX.msf.
+# LOCALIZATION NOTE(filterFolderTruncateFailed): %1$S is replaced by the folder name, %2$S is replaced by the brandShortName
+filterFolderTruncateFailed=Det oppstod en feil under pakking av innboksen, etter å ha flyttet en melding til mappen '%1$S'. Du kan måtte avslutte %2$S og slette INBOX.msf.
 
 mailboxTooLarge=Mappen %S er full, og kan ikke holde på fler meldinger. For å gjøre plass til fler meldinger, må du slette gamle eller uønskede meldinger, og komprimere mappen.
-errorGettingDB=Klarte ikke åpne oppsummeringsfil for '%S'. Kanskje oppsto en diskfeil, eller er den fullstendige stien for lang.
+errorGettingDB=Klarte ikke åpne oppsummeringsfilen for %S. Årsaken kan være feil på disken, eller stien er for lang.
 
 defaultServerTag=(Standard)
 
 # Used in message database list view to provide a text value for graphic based cells.
 messageUnread=Ulest
-messageHasFlag=Med stjerne
+messageHasFlag=Med flagg
 messageHasAttachment=Har vedlegg
 messageJunk=Uønsket
 messageExpanded=Utvidet
@@ -136,14 +136,14 @@ smtpServer-SecureAuthentication-Type-true=Ja
 smtpServers-confirmServerDeletionTitle=Slett tjener
 smtpServers-confirmServerDeletion=Er du sikker på at du vil slette tjeneren: \n %S?
 
-# LOCALIZATION NOTES(serverType-nntp): Do not translate "NNTP" in the line below
+# LOCALIZATION NOTE(serverType-nntp): Do not translate "NNTP" in the line below
 serverType-nntp=Nyhetsgruppetjener (NNTP)
-# LOCALIZATION NOTES(serverType-pop3): Do not translate "POP" in the line below
+# LOCALIZATION NOTE(serverType-pop3): Do not translate "POP" in the line below
 serverType-pop3=POP e-posttjener
-# LOCALIZATION NOTES(serverType-imap): Do not translate "IMAP" in the line below
+# LOCALIZATION NOTE(serverType-imap): Do not translate "IMAP" in the line below
 serverType-imap=IMAP e-posttjener
 serverType-none=Lokalt e-postlager
-# LOCALIZATION NOTES(serverType-movemail): DONT_TRANSLATE
+# LOCALIZATION NOTE(serverType-movemail): DONT_TRANSLATE
 serverType-movemail=Unix Movemail
 
 sizeColumnTooltip=Trykk her for å sortere etter størrelse
@@ -155,15 +155,15 @@ linesColumnHeader=Linjer
 documentDone=
 documentLoading=Laster melding …
 
-unreadMsgStatus=Ulest\: %S
+unreadMsgStatus=Ulest: %S
 selectedMsgStatus=Merket: %S
-totalMsgStatus=Totalt\: %S
+totalMsgStatus=Totalt: %S
 
 # localized folder names
 
 localFolders=Lokale mapper
 
-# LOCALIZATION NOTES (inboxFolderName): OK to translate all foldernames, bugzilla #57440 & bugzilla #23625 fixed
+# LOCALIZATION NOTE (inboxFolderName): OK to translate all foldernames, bugzilla #57440 & bugzilla #23625 fixed
 inboxFolderName=Innboks
 trashFolderName=Søppel
 sentFolderName=Sendt
@@ -212,7 +212,7 @@ groupFlagged=Flagget
 
 # defaults descriptions for tag prefs listed in mailnews.js
 # (we keep the .labels. names for backwards compatibility)
-mailnews.tags.remove=Slett alle merkelapper
+mailnews.tags.remove=Slett tilordnede etiketter
 mailnews.labels.description.1=Viktig
 mailnews.labels.description.2=Arbeid
 mailnews.labels.description.3=Personlig
@@ -250,7 +250,7 @@ junkScoreOriginImapFlag=IMAP-flagg
 hasAttachments=Har vedlegg
 
 # for the Tag picker in search and mail views.
-tag=Merkelapper
+tag=Etiketter
 
 # mailnews.js
 mailnews.send_default_charset=ISO-8859-1
@@ -294,12 +294,12 @@ mailnews.search_date_leading_zeros=true
 
 # offline msg 
 nocachedbodybody=Meldingsteksten til denne meldingen er ikke lastet ned fra \
-tjeneren for frakoblet lesing. For å lese denne meldingen \
-må du koble til nettverket igjen, velg Frakoblet tilstand fra \
-fil-menyen og velg "Arbeid frakoblet". \
-I framtiden kan du velge hvilke meldinger eller mapper som du vil lese frakoblet. \
-For å gjøre dette, velg "Frakoblet tilstand" fra fil-menyen og velg "Synkroniser". Du kan \
-justere diskplass-innstillingene for å forhindre nedlasting av store meldinger.
+tjeneren for frakoblet lesing. For å lese denne meldingen må du koble til nettverket igjen, \
+velg Frakoblet tilstand fra fil-menyen og velg "Arbeid tilkoblet". \
+I framtiden kan du velge hvilke meldinger eller mapper som du vil lese frakoblet. For å \
+gjøre dette, velg "Frakoblet" fra fil-menyen og velg "Synkroniser". Du kan \
+justere diskplass-innstillingene for å forhindre nedlasting \
+av store meldinger.
 
 # accountCentral
 mailnews.account_central_page.url=chrome://messenger/content/msgAccountCentral.xul
@@ -376,7 +376,7 @@ openWindowWarningTitle=Bekreft
 openWindowWarningText=Åpning av %S meldinger kan ta lang tid. Vil du fortsette?
 
 # for warning the user that a tag he's trying to create already exists
-tagExists=En merkelapp med det samme navnet fins allerede.
+tagExists=En etikett med samme navn fins allerede.
 
 # for checking if the user really wants to delete the adaptive filter training set
 confirmResetJunkTrainingTitle=Bekreft
@@ -415,9 +415,9 @@ emptyJunkTitle=Bekreft
 emptyJunkMessage=Er du sikker på at du ønsker å permanent slette alle meldinger og undermapper i Uønsket-mappen?
 emptyJunkDontAsk=Ikke spør igjen.
 emptyTrashTitle=Bekreft
-emptyTrashMessage=Er du sikker på at du ønsker å permanent slette alle meldinger og undermapper i søppel-mappen?
-emptyTrashDontAsk=Ikke spør igjen.
+emptyTrashMessage=Er du sikker på at du vil permanent slette alle meldinger og undermapper i søppel-mappen?
+emptyTrashDontAsk=Ikke spør om dette igjen.
 
 # junkCommands.js
-junkAnalysisPercentComplete=Analyse for uønsket post %S fullført
-processingJunkMessages=Behandler uønskede meldinger
+junkAnalysisPercentComplete=Analyse av uønsket post %S fullført
+processingJunkMessages=Behandler uønsket e-post
