--- a/nb-NO/suite/chrome/mailnews/msgmdn.properties
+++ b/nb-NO/suite/chrome/mailnews/msgmdn.properties
@@ -35,20 +35,20 @@
 #
 #***** END LICENSE BLOCK *****
 ## Msg Mdn Report strings
-MsgMdnDisplayed=Merk: Denne mottakskvitteringen bekrefter bare at meldingen er vist på mottakerens datamaskin. Det er ingen garanti at mottakeren har lest eller forstått meldingsinnholdet.
-MsgMdnDispatched=Meldingen ble enten skrevet ut, fakset eller videresendt uten å bli vist til mottakeren. Det er ingen garanti for at mottakeren vil lese eller forstå meldingen senere.
-MsgMdnProcessed=Meldingen ble behandlet av mottakerens e-postprogram uten å bli vist. Det er ingen garanti for at meldingen vil bli lest senere.
-MsgMdnDeleted=Meldingen har blitt slettet. Personen du sendte den til kan eller kan ikke ha sett den. De kan senere hente den fram igjen og lese den.
-MsgMdnDenied=Mottakeren av meldingen ønsker ikke å sende mottakskvittering tilbake til deg.
-MsgMdnFailed=En feil oppstod. En ordentlig mottakskvittering kunne ikke bli opprettet og sendt til deg.
+MsgMdnDisplayed=Merk: Denne kvitteringen bekrefter at meldingen ble vist på mottakerens datamaskin. Det er ingen garanti for at mottakeren har lest og forstått meldingsinnholdet.
+MsgMdnDispatched=Meldingen ble enten skrevet ut, fakset eller videresendt uten å bli vist hos mottakeren. Det er ingen garanti for at mottakeren vil lese meldingen senere.
+MsgMdnProcessed=Meldingen ble behandlet av mottakerens e-postprogram uten å bli lest. Det er ingen garanti for at meldingen vil bli lest senere.
+MsgMdnDeleted=Meldingen ble slettet. Personen du sendte meldingen til har kanskje eller kanskje ikke sett den. Mottakeren kan senere gjenopprette meldingen og lese den.
+MsgMdnDenied=Mottakeren av meldingen ønsker ikke å sende en kvittering tilbake til deg.
+MsgMdnFailed=En feil oppstod. Kvittering kunne ikke bli opprettet eller sendt til deg.
 MsgMdnWishToSend=Avsenderen av denne meldingen har bedt om å få beskjed når du leser denne meldingen. Vil du sende tilbake melding om dette?
 MsgMdnIgnoreRequest=Ignorer forespørsel
 MsgMdnSendReceipt=Send kvittering
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-MsgMdnMsgSentTo=Dette er en mottakskvittering for e-posten som du sendte til %S.
-MdnDisplayedReceipt=Mottakskvittering (vist)
-MdnDispatchedReceipt=Mottakskvittering (videresendt)
-MdnProcessedReceipt=Mottakskvittering (behandlet)
-MdnDeletedReceipt=Mottakskvittering (slettet)
-MdnDeniedReceipt=Mottakskvittering (avslått)
-MdnFailedReceipt=Mottakskvittering (feil)
+MsgMdnMsgSentTo=Dette er en kvittering for e-posten som du sendte til %S.
+MdnDisplayedReceipt=Kvittering (vist)
+MdnDispatchedReceipt=Kvittering (videresendt)
+MdnProcessedReceipt=Kvittering (behandlet)
+MdnDeletedReceipt=Kvittering (slettet)
+MdnDeniedReceipt=Kvittering (avslått)
+MdnFailedReceipt=Kvittering (feil)
