--- a/nb-NO/suite/chrome/mailnews/news.properties
+++ b/nb-NO/suite/chrome/mailnews/news.properties
@@ -37,7 +37,7 @@
 # ***** END LICENSE BLOCK *****
 downloadHeadersTitlePrefix=Last ned meldingshoder
 downloadHeadersInfoText=Det er %S nye meldingshoder å laste ned for denne nyhetsgruppen.
-htmlNewsErrorTitle=Feil\!
+htmlNewsErrorTitle=Feil!
 # LOCALIZATION NOTE ( htmlNewsError ): In the following item, translate only "Error!" and "newsgroup server responded:"
 htmlNewsError=<H1>Feil\!</H1>nyhetsgruppetjeneren svarte\:
 # LOCALIZATION NOTE ( articleExpired ): In the following item, translate only "Perhaps the article has expired"
@@ -47,7 +47,7 @@ cancelDisallowed=Denne meldingen ser ikke ut til å være fra deg. Du kan bare a
 cancelConfirm=Er du sikker på at du vil slette denne meldingen?
 messageCancelled=Melding slettet.
 enterUsername=Skriv inn et brukernavn for tilgang til nyhetsgruppetjeneren\:
-enterUsernameTitle=Brukernavn for nyhetsgruppetjener er påkrevd
+enterUsernameTitle=Brukernavn for nyhetsgruppetjeneren er påkrevd
 saveUsername=Bruk passordbehandling for å huske denne verdien.
 enterPassword=Skriv inn et passord for tilgang til nyhetsgruppetjeneren\:
 enterPasswordTitle=Nyhetsgruppetjeneren krever passord
@@ -73,7 +73,7 @@ autoSubscribeText=Vil du melde deg inn i %1$S?
 # Error - server error
 ## @name NNTP_ERROR_MESSAGE
 ## @loc None
--304=En nyhetsgruppefeil oppstod\:
+-304=En nyhetsgruppefeil oppstod:
 
 # Error - newsgroup scan error
 ## @name NNTP_NEWSGROUP_SCAN_ERROR
