--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -324,8 +324,8 @@ detachLabel=Frikoble …
 detachLabelAccesskey=F
 deleteLabel=Slett
 deleteLabelAccesskey=S
-deleteAttachments=Følgende vedlegg vil bli permanent slettet fra denne meldingen:\n%S\nDenne handlingen kan ikke omgjøres. Vil du fortsette?
-detachAttachments=Følgende vedlegg er lagret, og vil nå permanent bli slettet fra meldingen:\n%S\nDenne handlingen kan ikke omgjøres. Vil du fortsette?
+deleteAttachments=Følgende vedlegg slettes nå permanent fra denne meldingen:\n%S\nDenne handlingen kan ikke omgjøres. Vil du fortsette?
+detachAttachments=Følgende vedlegg er lagret, og slettes nå permanent fra meldingen:\n%S\nDenne handlingen kan ikke omgjøres. Vil du fortsette?
 deleteAttachmentFailure=Klarte ikke slette de valgte vedleggene.
 
 # This is the format for prepending accesskeys to the
@@ -399,7 +399,7 @@ editTagTitle=Rediger etikett
 
 # for the virtual folder list dialog title
 # %S is the name of the saved search folder
-editVirtualFolderPropertiesTitle=Redigere lagrede søkeegenskaper for %S
+editVirtualFolderPropertiesTitle=Rediger lagret søk «%S»
 
 #alert to inform the user to choose one or more folders to search for a saved search folder
 alertNoSearchFoldersSelected=Du må velge minst en mappe å søke i for det lagrede søket.
@@ -414,7 +414,7 @@ errorOpenMessageForMessageIdTitle=Feil ved åpning av meldingsid
 errorOpenMessageForMessageIdMessage=Klarte ikke finne meldingen for meldingsid-en %S
 
 # Warnings to alert users about phishing urls
-confirmPhishingTitle=Email Scam Alert
+confirmPhishingTitle=E-postsvindeladvarsel
 #LOCALIZATION NOTE %1$S is the brand name, %2$S is the host name of the url being visited
 confirmPhishingUrl=%1$S tror dette nettstedet er en svindel. Det er mulig det forsøker å etterligne et annet nettsted du vil besøke. Er du sikker på at du vil besøke %2$S?
 
