--- a/nb-NO/mail/chrome/messenger/news.properties
+++ b/nb-NO/mail/chrome/messenger/news.properties
@@ -47,8 +47,8 @@ cancelDisallowed=Denne meldingen ser ikke ut til å være fra deg. Du kan bare a
 cancelConfirm=Er du sikker på at du vil slette denne meldingen?
 messageCancelled=Melding slettet.
 enterUsername=Skriv inn et brukernavn for tilgang til nyhetsgruppetjeneren\:
-enterUsernameTitle=Brukernavn for nyhetsgruppetjenesten er påkrevd
-saveUsername=Bruk passordbehandleren for å huske denne verdien.
+enterUsernameTitle=Brukernavn for nyhetsgruppetjeneren er påkrevd
+saveUsername=Bruk passordbehandling for å huske denne verdien.
 enterPassword=Skriv inn et passord for tilgang til nyhetsgruppetjeneren\:
 enterPasswordTitle=Nyhetsgruppetjeneren krever passord
 okButtonText=Last ned
@@ -57,7 +57,7 @@ noNewMessages=Det er ingen nye meldinger på tjeneren
 downloadingHeaders=Laster ned %S av %S meldingshoder
 downloadingFilterHeaders=Laster ned meldingshoder for filtre: %S (%S/%S)
 downloadingArticles=Laster ned artikler %S-%S
-bytesReceived=Laster ned nyhetsgrupper: %S mottatt (%S KB innlest med %S KB/sek)
+bytesReceived=Laster ned nyhetsgrupper: %S mottatt (%S KB lest med %S KB/sek)
 checkingForNewNews=Sjekker nyhetsgruppe %S av %S på %S for nye meldinger
 downloadingArticlesForOffline=Laster ned artikler %S-%S fra %S
 
