--- a/nb-NO/suite/chrome/common/history/places.properties
+++ b/nb-NO/suite/chrome/common/history/places.properties
@@ -5,10 +5,10 @@ delete.domain.true=Slett historikk for *.%S
 delete.domain.false=Slett historikk for domene
 delete.domain.accesskey=d
 
-load-js-data-url-error=Av sikkerhetsgrunner kan JavaScript og data-URLer ikke lastes fra historikkvinduet eller sidestolpen.
+load-js-data-url-error=Av sikkerhetsårsaker kan ikke javascript- eller data-URL-er lastes fra historikkvinduet eller sidestolpen.
 noTitle=(ingen tittel)
 
 tabs.openWarningTitle=Bekreft åpning
-tabs.openWarningMultipleBranded=Du åpner nå %S faner.  Dette kan gjøre %S treg mens nettsidene laster inn.  Er du sikker på at du vil fortsette?
+tabs.openWarningMultipleBranded=Du åpner nå %S faner.  Dette kan gjøre at %S bruker lang tid på å laste sidene.  Er du sikker på at du vil fortsette?
 tabs.openButtonMultiple=Åpne faner
-tabs.openWarningPromptMeBranded=Advar meg ved åpning av flere faner som kan gjøre %S treg
+tabs.openWarningPromptMeBranded=Advar når åpning av flere faner kan gjøre %S treg
