--- a/nb-NO/suite/chrome/mailnews/imapMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/imapMsgs.properties
@@ -119,12 +119,12 @@
 # Status - logging on
 ## @name IMAP_STATUS_SENDING_LOGIN
 ## @loc None
-5013=Sender innlogging
+5013=Sender innlogging …
 
 # Status - auth logon
 ## @name IMAP_STATUS_SENDING_AUTH_LOGIN
 ## @loc None
-5014=Sender autentisering …
+5014=Sender innlogging …
 
 ## @name IMAP_DOWNLOADING_MESSAGE
 ## @loc None
