--- a/nb-NO/suite/chrome/mailnews/localMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/localMsgs.properties
@@ -52,7 +52,7 @@
 ## @loc None
 #LOCALIZATION NOTE (4000): Do not translate %s in the following line.
 # Place the word %s where the name of the mailbox should appear
-4000=Lager oppsummeringsfil for %S ...
+4000=Lager oppsummeringsfil for %S …
 
 # Status - parsing folder
 ## @name LOCAL_STATUS_DOCUMENT_DONE
@@ -97,7 +97,7 @@
 # Status - connecting to host
 ## @name POP3_CONNECT_HOST_CONTACTED_SENDING_LOGIN_INFORMATION
 ## @loc None
-4007=Tilkobling\: Tjener kontaktet, sender innlogging ...
+4007=Tilkobling\: Tjener kontaktet, sender innlogging …
 
 # Status - no messages to download 
 ## @name POP3_NO_MESSAGES
@@ -127,7 +127,7 @@
 # Status - username undefined 
 ## @name POP3_USERNAME_UNDEFINED
 ## @loc None
-4014=Du har ikke oppgitt brukernavn for denne tjeneren. Oppgi et i konto-innstillingene og prøv igjen.
+4014=Du har ikke oppgitt brukernavn for denne tjeneren. Oppgi et i kontoinnstillingene og prøv igjen.
 
 # Status - list failure
 ## @name POP3_LIST_FAILURE
@@ -219,7 +219,7 @@
 ## @loc None
 4038=Det oppstod en feil under nedlasting av denne meldingen:   \nFra: %S\n   Emne: %S\n Denne meldingen kan inneholde et virus, eller så er det ikke nok diskplass. Hopp over meldingen?
 
-# Status - the server doesn't support UIDL...
+# Status - the server doesn't support UIDL…
 ## @name POP3_SERVER_DOES_NOT_SUPPORT_UIDL_ETC
 ## @loc None
 # LOCALIZATION NOTE(4010): The following sentence should be translated in this way:
