--- a/nb-NO/suite/chrome/mailnews/subscribe.properties
+++ b/nb-NO/suite/chrome/mailnews/subscribe.properties
@@ -40,4 +40,4 @@ currentListTab-nntp.label=Nåværende gruppeliste
 currentListTab-nntp.accesskey=v
 currentListTab-imap.label=Mappeliste
 currentListTab-imap.accesskey=M
-pleaseWaitString=Vent ...
+pleaseWaitString=Vent …
