--- a/nb-NO/suite/chrome/mailnews/vcard.properties
+++ b/nb-NO/suite/chrome/mailnews/vcard.properties
@@ -257,7 +257,7 @@
 # VCARD_LDAP_LABEL
 ## @name VCARD_LDAP_LABEL
 ## @loc None
-1043=Merkelapp
+1043=Etikett
 
 # VCARD_LDAP_MAILER
 ## @name VCARD_LDAP_MAILER
@@ -292,7 +292,7 @@
 # VCARD_ADDR_ADDINFO
 ## @name VCARD_ADDR_ADDINFO
 ## @loc None
-1050=Tilleggsinformasjon\:
+1050=Tilleggsinformasjon:
 
 # VCARD_ADDR_VIEW_COMPLETE_VCARD
 ## @name VCARD_ADDR_VIEW_COMPLETE_VCARD
