Update nb-NO l10n

--- a/nb-NO/browser/chrome/browser/tabbrowser.properties
+++ b/nb-NO/browser/chrome/browser/tabbrowser.properties
@@ -7,4 +7,4 @@ tabs.closeWarningOneTab=Du vil nå lukke %S faner. Er du sikker på at du vil fo
 tabs.closeWarningMultipleTabs=Du vil nå lukke %S faner. Er du sikker på at du vil fortsette?
 tabs.closeButtonOne=Lukk fane
 tabs.closeButtonMultiple=Lukk faner
-tabs.closeWarningPromptMe=Advar når jeg forsøker lukke flere faner
+tabs.closeWarningPromptMe=Advar når jeg lukker flere faner
