--- a/nb-NO/suite/chrome/browser/tabbrowser.properties
+++ b/nb-NO/suite/chrome/browser/tabbrowser.properties
@@ -1,6 +1,6 @@
 tabs.loading=Laster …
 tabs.untitled=(Ingen tittel)
-tabs.closeWarningTitle=Bekreft lukking av andre faner
-tabs.closeWarning=Du vil nå lukke %S fane(r). Er du sikker på at du vil fortsette?
-tabs.closeButton=Lukk andre faner
-tabs.closeWarningPromptMe=Advar meg når jeg lukker flere faner
+tabs.closeWarningTitle=Bekreft lukking
+tabs.closeWarning=Du vil nå lukke %S faner. Er du sikker på at du vil fortsette?
+tabs.closeButton=Lukk faner
+tabs.closeWarningPromptMe=Advar når jeg lukker flere faner
