--- a/nb-NO/suite/chrome/mailnews/smime/msgSecurityInfo.properties
+++ b/nb-NO/suite/chrome/mailnews/smime/msgSecurityInfo.properties
@@ -1,6 +1,6 @@
 ## Signature Information strings
 SINoneLabel=Meldingen har ingen digital signatur
-SINone=Meldingen inneholder ikke avsenderens digitale signatur. Fraværet av en digital signatur betyr at meldingen kan ha blitt sendt av noen som feilaktig påstår at de har denne e-postadressen. Det er også mulig at meldingen har blitt endret mens den har blitt overført på nettet. Det er likevel usannsynlig at dette har skjedd.
+SINone=Meldingen inneholder ikke avsenderens digitale signatur. Fraværet av en digital signatur betyr at meldingen kan ha blitt sendt av noen som feilaktig påstår at de har denne e-postadressen. Det er også mulig at meldingen er endret mens den ble overført på nettet. Det er likevel usannsynlig at dette har skjedd.
 
 SIValidLabel=Meldingen er signert
 SIValid=Denne meldingen inneholder en gyldig digital signatur. Meldingen har ikke blitt endret etter at den ble sendt.
@@ -8,15 +8,15 @@ SIValid=Denne meldingen inneholder en gyldig digital signatur. Meldingen har ikk
 SIInvalidLabel=Digital signatur er ikke gyldig
 SIInvalidHeader=Meldingen inneholder en digital signatur, men signaturen er ugyldig.
 
-SIContentAltered=Signaturen stemmer ikke med innholdet i meldingen. Det ser ut som meldingen har blitt endret etter at avsenderen signerte den. Du bør ikke stole på gyldigheten før du har bekreftet innholdet med avsenderen.
-SIExpired=Sertifikatet brukt for å signere meldingen har utgått. Kontroller at klokka på datamaskinen er satt korrekt.
-SIRevoked=Sertifikatet som ble brukt for å signere denne meldingen har blitt opphevet. Du bør ikke stole på gyldigheten til meldingen uten at du bekrefter innholdet med avsenderen.
-SINotYetValid=Sertifikatet som ble brukt for å signere denne meldingen ser ikke ut til å være gyldig ennå. Kontroller at klokka på datamaskinen er satt riktig.
-SIUnknownCA=Sertifikatet som ble brukt for å signere denne meldingen ble utstedt av en ukjent sertifikat-myndighet.
-SIUntrustedCA=Sertifikatet som ble brukt for å signere meldingen ble utstedt av en sertifikat-myndighet som du ikke stoler på for å utstede slike typer sertifikater.
-SIExpiredCA=Sertifikatet brukt for å signere denne meldingen ble utstedt av en sertifikat-myndighet hvis eget sertifikat har utgått. Kontroller at klokka på datamaskinen er satt riktig.
-SIRevokedCA=Sertifikatet som ble brukt for å signere denne meldingen ble utstedt av en sertifikat-myndighet hvis eget sertifikat har blitt opphevet. Du bør ikke stole på gyldigheten til denne meldingen før du har bekreftet innholdet med avsenderen.
-SINotYetValidCA=Sertifikatet som ble brukt for å signere meldingen, ble utstedt av en sertifikat-myndighet som ikke ennå har et gyldig sertifikat. Kontroller at klokka på datamaskinen er satt korrekt.
+SIContentAltered=Signaturen stemmer ikke med innholdet i meldingen. Det ser ut som meldingen er endret etter at avsenderen signerte den. Du bør ikke stole på gyldigheten før du har bekreftet innholdet med avsenderen.
+SIExpired=Sertifikatet brukt for å signere meldingen har utgått. Kontroller at klokken på datamaskinen er satt korrekt.
+SIRevoked=Sertifikatet som ble brukt for å signere denne meldingen er opphevet. Du bør ikke stole på gyldigheten til meldingen uten at du bekrefter innholdet med avsenderen.
+SINotYetValid=Sertifikatet som ble brukt for å signere denne meldingen ser ikke ut til å være gyldig ennå. Kontroller at klokken på datamaskinen er satt riktig.
+SIUnknownCA=Sertifikatet som ble brukt for å signere denne meldingen ble utstedt av en ukjent utsteder.
+SIUntrustedCA=Sertifikatet som ble brukt for å signere meldingen ble utstedt av en utsteder som du ikke stoler på for å utstede denne typen sertifikater.
+SIExpiredCA=Sertifikatet brukt for å signere denne meldingen ble utstedt av en utsteder hvis eget sertifikat har utgått. Kontroller at klokken på datamaskinen er satt riktig.
+SIRevokedCA=Sertifikatet som ble brukt for å signere denne meldingen ble utstedt av en utsteder hvis eget sertifikat er opphevet. Du bør ikke stole på gyldigheten til denne meldingen før du har bekreftet innholdet med avsenderen.
+SINotYetValidCA=Sertifikatet som ble brukt for å signere meldingen, ble utstedt av en utsteder som ikke ennå har et gyldig sertifikat. Kontroller at klokken på datamaskinen er satt korrekt.
 SIInvalidCipher=Meldingen ble signert med en krypteringsstyrke som denne versjonen av programmet ikke støtter.
 SIClueless=Det er noen problemer med den digitale signaturen. Du bør ikke stole på gyldigheten av meldingen før du har fått bekreftet innholdet med avsenderen.
 
@@ -37,4 +37,4 @@ EIInvalidLabel=Melding kunne ikke bli dekryptert
 EIInvalidHeader=Meldingen ble kryptert før den ble sendt til deg, men den kan ikke bli dekryptert.
 
 EIContentAltered=Meldingsinnholdet ser ut til å ha blitt endret mens det ble overført.
-EIClueless=Det er ukjente problemer med denne krypterte meldingen.
+EIClueless=Det er noen problemer med denne krypterte meldingen.
