--- a/nb-NO/suite/chrome/browser/metadata.properties
+++ b/nb-NO/suite/chrome/browser/metadata.properties
@@ -2,10 +2,10 @@ sameWindowText=Samme vindu
 newWindowText=Nytt vindu
 parentFrameText=Overordnet ramme
 sameFrameText=Samme ramme
-embeddedText=Omgitt
-unableToShowProps=Ingen egenskaper er tilgjengelige.
+embeddedText=Innbundet
+unableToShowProps=Ingen egenskaper tilgjengelige.
 altTextMissing=Mangler
-altTextBlank=Blank
+altTextBlank=Ingen
 imageSize=%S KB (%S bytes)
 imageSizeUnknown=Ukjent (ikke mellomlagret)
 imageWidth=%S px
