Update nb-NO l10n

--- a/nb-NO/browser/chrome/browser/feeds/subscribe.properties
+++ b/nb-NO/browser/chrome/browser/feeds/subscribe.properties
@@ -16,7 +16,7 @@ mediaLabel=Media-filer
 #   %2$S = unit of measure (bytes, KB, MB, ...)
 enclosureSizeText=%1$S %2$S
 
-bytes=bytes
+bytes=byte
 kilobyte=KB
 megabyte=MB
 gigabyte=GB
