--- a/nb-NO/browser/chrome/browser/metaData.properties
+++ b/nb-NO/browser/chrome/browser/metaData.properties
@@ -7,7 +7,7 @@ embeddedText=Innbundet
 unableToShowProps=Ingen egenskaper tilgjengelige.
 altTextMissing=Mangler
 altTextBlank=Ingen
-imageSize=%S KB (%S bytes)
+imageSize=%S KB (%S byte)
 imageSizeUnknown=Ukjent (ikke mellomlagret)
 imageType=%S-bilde
 animatedImageType=%S-bilde (animert, %S rammer)
