--- a/nb-NO/security/manager/chrome/pipnss/pipnss.properties
+++ b/nb-NO/security/manager/chrome/pipnss/pipnss.properties
@@ -289,7 +289,7 @@ CertDumpECsect409k1=SECG ellipsekurve sect409k1 (aka NIST K-409)
 CertDumpECsect409r1=SECG ellipsekurve sect409r1 (aka NIST B-409)
 CertDumpECsect571k1=SECG ellipsekurve sect571k1 (aka NIST K-571)
 CertDumpECsect571r1=SECG ellipsekurve sect571r1 (aka NIST B-571)
-CertDumpRawBytesHeader=Størrelse: %S Bytes / %S Bits
+CertDumpRawBytesHeader=Størrelse: %S byte / %S bits
 VerifySSLClient_p=Klient
 VerifySSLServer_p=Tjener
 VerifySSLStepUp_p=Step-up
