--- a/nb-NO/suite/chrome/browser/metadata.properties
+++ b/nb-NO/suite/chrome/browser/metadata.properties
@@ -6,7 +6,7 @@ embeddedText=Innbundet
 unableToShowProps=Ingen egenskaper tilgjengelige.
 altTextMissing=Mangler
 altTextBlank=Ingen
-imageSize=%S KB (%S bytes)
+imageSize=%S KB (%S byte)
 imageSizeUnknown=Ukjent (ikke mellomlagret)
 imageWidth=%S px
 imageHeight=%S px
