--- a/nb-NO/suite/chrome/browser/pageInfo.properties
+++ b/nb-NO/suite/chrome/browser/pageInfo.properties
@@ -64,7 +64,7 @@ generalStrictMode=Standardmodus
 generalNotCached=Uten hurtiglager
 generalDiskCache=Hurtiglager på disk
 generalMemoryCache=Hurtiglager i minnet
-generalSize=%S KB (%S bytes)
+generalSize=%S KB (%S byte)
 generalMetaTag=Metainformasjon (1 merkelapp)
 generalMetaTags=Metainformasjon (%S merkelapper)
 generalSiteIdentity=Dette nettstedet eies av %S\nNettstedet er bekreftet av %S
