--- a/nb-NO/toolkit/chrome/global/regionNames.properties
+++ b/nb-NO/toolkit/chrome/global/regionNames.properties
@@ -213,7 +213,7 @@ td	=	Tsjad
 tf	=	De franske sørterritorier
 tg	=	Togo
 th	=	Thailand
-tj	=	Tajikistan
+tj	=	Tadsjikistan
 tk	=	Tokelau
 tl	=	Øst-Timor
 tm	=	Turkmenistan
