--- a/nb-NO/browser/chrome/browser/pageInfo.properties
+++ b/nb-NO/browser/chrome/browser/pageInfo.properties
@@ -50,7 +50,7 @@ no=Nei
 mediaImg=Bilde
 mediaBGImg=Bakgrunn
 mediaObject=Objekt
-mediaEmbed=Embed
+mediaEmbed=Innbundet
 mediaLink=Ikon
 mediaInput=Inputt
 mediaFileSize=%S KB
@@ -68,7 +68,7 @@ generalStrictMode=Standardmodus
 generalNotCached=Uten hurtiglager
 generalDiskCache=Hurtiglager på disk
 generalMemoryCache=Hurtiglager i minnet
-generalSize=%S KB (%S bytes)
+generalSize=%S KB (%S byte)
 generalMetaTag=Metainformasjon (1 merkelapp)
 generalMetaTags=Metainformasjon (%S merkelapper)
 generalSiteIdentity=Dette nettstedet eies av %S\nNettstedet er bekreftet av %S
