--- a/nb-NO/dom/chrome/layout/css.properties
+++ b/nb-NO/dom/chrome/layout/css.properties
@@ -37,101 +37,101 @@
 MimeNotCss=Klarte ikke laste stilarket %1$S fordi MIME-typen, «%2$S» er ikke «text/css».
 MimeNotCssWarn=Lastet stilarket %1$S, selv om MIME-typen, «%2$S», ikke er «text/css».
 
-PEUnexpEOF2=Unexpected end of file while searching for %1$S.
-PEParseRuleWSOnly=Whitespace-only string given to be parsed as rule.
-PEDeclDropped=Declaration dropped.
-PEDeclSkipped=Skipped to next declaration.
-PEUnknownProperty=Unknown property '%1$S'.
-PEValueParsingError=Error in parsing value for '%1$S'.
-PEExpectEndValue=Expected end of value but found '%1$S'.
-PESkipAtRuleEOF=end of unknown at-rule
-PEUnknownAtRule=Unrecognized at-rule or error parsing at-rule '%1$S'.
-PECharsetRuleEOF=charset string in @charset rule
-PECharsetRuleNotString=Expected charset string but found '%1$S'.
-PEGatherMediaEOF=end of media list in @import or @media rule
-PEGatherMediaNotComma=Expected ',' in media list but found '%1$S'.
-PEGatherMediaNotIdent=Expected identifier in media list but found '%1$S'.
-PEImportNotURI=Expected URI in @import rule but found '%1$S'.
-PEImportUnexpected=Found unexpected '%1$S' within @import.
-PEGroupRuleEOF=end of @media or @-moz-document rule
-PEMozDocRuleBadFunc=Expected url(), url-prefix(), or domain() in @-moz-document rule but found '%1$S'.
-PEMozDocRuleNotURI=Expected URI in @-moz-document rule but found '%1$S'.
-PEAtNSPrefixEOF=namespace prefix in @namespace rule
-PEAtNSURIEOF=namespace URI in @namespace rule
-PEAtNSUnexpected=Unexpected token within @namespace: '%1$S'.
-PESkipDeclBraceEOF=closing } of declaration block
-PESkipRSBraceEOF=closing } of invalid rule set
-PEBadSelectorRSIgnored=Ruleset ignored due to bad selector.
-PESelectorListExtraEOF=',' or '{'
-PESelectorListExtra=Expected ',' or '{' but found '%1$S'.
-PESelectorGroupNoSelector=Selector expected.
-PESelectorGroupExtraCombinator=Dangling combinator.
-PEClassSelEOF=class name
-PEClassSelNotIdent=Expected identifier for class selector but found '%1$S'.
-PETypeSelEOF=element type
-PETypeSelNotType=Expected element name or '*' but found '%1$S'.
-PEUnknownNamespacePrefix=Unknown namespace prefix '%1$S'.
-PEAttributeNameEOF=attribute name
-PEAttributeNameExpected=Expected identifier for attribute name but found '%1$S'.
-PEAttributeNameOrNamespaceExpected=Expected attribute name or namespace but found '%1$S'.
-PEAttSelNoBar=Expected '|' but found '%1$S'.
-PEAttSelInnerEOF=part of attribute selector
-PEAttSelUnexpected=Unexpected token in attribute selector: '%1$S'.
-PEAttSelValueEOF=attribute value
-PEAttSelCloseEOF=']' to end attribute selector
-PEAttSelNoClose=Expected ']' to terminate attribute selector but found '%1$S'.
-PEAttSelBadValue=Expected identifier or string for value in attribute selector but found '%1$S'.
-PEPseudoSelEOF=name of pseudo-class or pseudo-element
-PEPseudoSelBadName=Expected identifier for pseudo-class or pseudo-element but found '%1$S'.
-PEPseudoSelNonFunc=Function token for non-function pseudo-class or pseudo-element, or the other way around, when reading '%1$S'.
-PEPseudoSelNotPE=Expected pseudo-element but found '%1$S'.
-PEPseudoSelDoubleNot=Negation pseudo-class can't be negated '%1$S'.
-PEPseudoSelPEInNot=Pseudo-elements can't be negated '%1$S'.
-PEPseudoSelNewStyleOnly=This pseudo-element must use the "::" form: '%1$S'.
-PEPseudoSelTrailing=Found trailing token after pseudo-element, which must be the last part of a selector:  '%1$S'.
-PEPseudoSelMultiplePE=Extra pseudo-element '%1$S'.
-PEPseudoSelUnknown=Unknown pseudo-class or pseudo-element '%1$S'.
-PENegationEOF=selector within negation
-PENegationBadInner=Malformed simple selector as negation pseudo-class argument '%1$S'.
-PENegationNoClose=Missing closing ')' in negation pseudo-class '%1$S'.
-PENegationBadArg=Missing argument in negation pseudo-class '%1$S'.
-PEPseudoClassArgEOF=argument to pseudo-class selector
-PEPseudoClassArgNotIdent=Expected identifier for pseudo-class parameter but found '%1$S'.
-PEPseudoClassArgNotNth=Expected part of argument to pseudo-class but found '%1$S'.
-PEPseudoClassNoClose=Missing closing ')' in pseudo-class, found '%1$S' instead.
-PEPseudoClassNoArg=Missing argument in pseudo-class '%1$S'.
-PESelectorEOF=selector
-PEBadDeclBlockStart=Expected '{' to begin declaration block but found '%1$S'.
-PEColorEOF=color
-PEColorNotColor=Expected color but found '%1$S'.
-PEColorComponentEOF=color component
-PEExpectedPercent=Expected a percentage but found '%1$S'.
-PEExpectedInt=Expected an integer but found '%1$S'.
-PEColorBadRGBContents=Expected number or percentage in rgb() but found '%1$S'.
-PEColorComponentBadTerm=Expected '%2$S' but found '%1$S'.
-PEColorHueEOF=hue
-PEExpectedComma=Expected ',' but found '%1$S'.
-PEColorSaturationEOF=saturation
-PEColorLightnessEOF=lightness
-PEColorOpacityEOF=opacity in color value
-PEExpectedNumber=Expected a number but found '%1$S'.
-PEExpectedCloseParen=Expected ')' but found '%1$S'.
-PEDeclEndEOF=';' or '}' to end declaration
-PEParseDeclarationNoColon=Expected ':' but found '%1$S'.
-PEParseDeclarationDeclExpected=Expected declaration but found '%1$S'.
-PEEndOfDeclEOF=end of declaration
-PEImportantEOF=important
-PEExpectedImportant=Expected 'important' but found '%1$S'.
-PEBadDeclEnd=Expected ';' to terminate declaration but found '%1$S'.
-PEBadDeclOrRuleEnd2=Expected ';' or '}' to terminate declaration but found '%1$S'.
-PEInaccessibleProperty2=Cannot specify value for internal property.
-PECommentEOF=end of comment
-SEUnterminatedString=Found unclosed string '%1$S'.
-PEFontDescExpected=Expected font descriptor but found '%1$S'.
-PEUnknownFontDesc=Unknown descriptor '%1$S' in @font-face rule.
-PEMQExpectedExpressionStart=Expected '(' to start media query expression but found '%1$S'.
-PEMQExpressionEOF=contents of media query expression
-PEMQExpectedFeatureName=Expected media feature name but found '%1$S'.
-PEMQExpectedFeatureNameEnd=Expected ':' or ')' after media feature name but found '%1$S'.
-PEMQNoMinMaxWithoutValue=Media features with min- or max- must have a value.
-PEMQExpectedFeatureValue=Found invalid value for media feature.
+PEUnexpEOF2=Uventet slutt på filen ved søk etter %1$S.
+PEParseRuleWSOnly=En streng med bare mellomrom ble oppgitt for å bli tolket som regel.
+PEDeclDropped=Deklarasjonen ble sløyfet.
+PEDeclSkipped=Hoppet til neste deklarasjon.
+PEUnknownProperty=Ukjent egenskap '%1$S'.
+PEValueParsingError=Klarte ikke tolke verdien for '%1$S'.
+PEExpectEndValue=Ventet slutt på verdi men fant '%1$S'.
+PESkipAtRuleEOF=slutten på ukjent at-regel
+PEUnknownAtRule=Ukjent at-regel eller feil under lesing av at-regelen '%1$S'.
+PECharsetRuleEOF=charset-streng i @charse-regelen
+PECharsetRuleNotString=Forventet charset-streng men fant '%1$S'.
+PEGatherMediaEOF=slutt på medialisten i @import eller @media-reglene
+PEGatherMediaNotComma=Forventet ',' i medialisten men fant '%1$S'.
+PEGatherMediaNotIdent=Forventet identifier i medialisten men fant '%1$S'.
+PEImportNotURI=Forventet URI i @import-regelen men fant '%1$S'.
+PEImportUnexpected=Fant uventet '%1$S' i @import.
+PEGroupRuleEOF=slutt på @media eller @-moz-document-reglene
+PEMozDocRuleBadFunc=Forventet url(), url-prefix(), eller domain() i @-moz-document-regelen men fant '%1$S'.
+PEMozDocRuleNotURI=Forventet URI i @-moz-document-regelen men fant '%1$S'.
+PEAtNSPrefixEOF=navnerom-prefiks i @namespace-regel
+PEAtNSURIEOF=navnerom-URI i @namespace regel
+PEAtNSUnexpected=Uventet tegn innenfor @namespace: '%1$S'.
+PESkipDeclBraceEOF=Avsluttende } av deklarasjonsblokk
+PESkipRSBraceEOF=Avsluttende } av ugyldig regelsett
+PEBadSelectorRSIgnored=Regelsettet ignorert på grunn av ugyldig selektor.
+PESelectorListExtraEOF=',' eller '{'
+PESelectorListExtra=Forventet ',' eller '{' men fant '%1$S'.
+PESelectorGroupNoSelector=Forventet selektor.
+PESelectorGroupExtraCombinator=Overflødig kombinator.
+PEClassSelEOF=Klassenavn
+PEClassSelNotIdent=Forventet identifier for klasseselektor men fant '%1$S'.
+PETypeSelEOF=elementtype
+PETypeSelNotType=Forventet elementnavn eller '*' men fant '%1$S'.
+PEUnknownNamespacePrefix=Ukjent navnerom-prefiks '%1$S'.
+PEAttributeNameEOF=attributtnavn
+PEAttributeNameExpected=Forventet identifier for attributtnavn men fant '%1$S'.
+PEAttributeNameOrNamespaceExpected=Forventet attributtnavn eller namnerom men fant '%1$S'.
+PEAttSelNoBar=Forventet '|' men fant '%1$S'.
+PEAttSelInnerEOF=del av attributt-selektor
+PEAttSelUnexpected=Uventet tegn i attributt-selektor: '%1$S'.
+PEAttSelValueEOF=attributtverdi
+PEAttSelCloseEOF=']' til slutten av attributt-selektor
+PEAttSelNoClose=Forventet ']' til endelig attributt-selektor men fant '%1$S'.
+PEAttSelBadValue=Forventet ident eller streng som verdi i attributt-selektor men fant '%1$S'.
+PEPseudoSelEOF=navn på pseudo-klasse eller pseudo-element
+PEPseudoSelBadName=Forventet identifier for pseudo-klasse eller pseudo-element men fant '%1$S'.
+PEPseudoSelNonFunc=Funksjons-token for ikke-funksjons pseudo-klasse eller pseudo-element, eller omvendt, under lesing av '%1$S'.
+PEPseudoSelNotPE=Forventet pseudo-element men fant '%1$S'.
+PEPseudoSelDoubleNot=Nektende pseudo-klasse kan ikke inverteres '%1$S'.
+PEPseudoSelPEInNot=Pseudo-elementer kan ikke inverteres '%1$S'.
+PEPseudoSelNewStyleOnly=Dette pseudo-elementet må bruke "::"-formen: '%1$S'.
+PEPseudoSelTrailing=Fant avsluttende tegn etter pseudo-element, som må være siste delen av en selektor:  '%1$S'.
+PEPseudoSelMultiplePE=Ekstra pseudo-element '%1$S'.
+PEPseudoSelUnknown=Ukjent pseudo-klasse eller pseudo-element '%1$S'.
+PENegationEOF=selektor innenfor nekting
+PENegationBadInner=Ugyldig enkel selektor som nektende pseudo-klasse-argument '%1$S'.
+PENegationNoClose=Mangler avsluttende ')' i nektende pseudo-klasse '%1$S'.
+PENegationBadArg=Mangler argument i nektende pseudo-klasse '%1$S'.
+PEPseudoClassArgEOF=argumentet til pseudo-klasse-selektor
+PEPseudoClassArgNotIdent=Forventet identifier for pseudo-klasse-parameter men fant '%1$S'.
+PEPseudoClassArgNotNth=Forventet del av argument til pseudo-klasse men fant '%1$S'.
+PEPseudoClassNoClose=Mangler avsluttende ')' i pseudo-klasse, fant '%1$S' isteden.
+PEPseudoClassNoArg=Manglende argument i pseudo-klasse '%1$S'.
+PESelectorEOF=selektor
+PEBadDeclBlockStart=Forventet '{' i begynnelsen av deklarasjonsblokken men fant '%1$S'.
+PEColorEOF=farge
+PEColorNotColor=Forventet farge men fant '%1$S'.
+PEColorComponentEOF=fargekomponent
+PEExpectedPercent=Forventet et prosenttall men fant '%1$S'.
+PEExpectedInt=Forventet et heltall men fant '%1$S'.
+PEColorBadRGBContents=Forventet tall eller prosent i rgb() men fant '%1$S'.
+PEColorComponentBadTerm=Forventet '%2$S' men fant '%1$S'.
+PEColorHueEOF=fargetone
+PEExpectedComma=Forventet ',' men fant '%1$S'.
+PEColorSaturationEOF=metning
+PEColorLightnessEOF=lysstyrke
+PEColorOpacityEOF=Gjennomsiktighet i fargeverdien
+PEExpectedNumber=Forventet et tall men fant '%1$S'.
+PEExpectedCloseParen=Forventet ')' men fant '%1$S'.
+PEDeclEndEOF=';' eller '}' til slutten av deklarasjonen
+PEParseDeclarationNoColon=Forventet ':' men fant '%1$S'.
+PEParseDeclarationDeclExpected=Forventet deklarasjon men fant '%1$S'.
+PEEndOfDeclEOF=slutt på deklarasjonen
+PEImportantEOF=viktig
+PEExpectedImportant=Forventet 'important' men fant '%1$S'.
+PEBadDeclEnd=Forventet at ';' skulle avslutte deklarasjonen men fant '%1$S'.
+PEBadDeclOrRuleEnd2=Forventet at ';' eller '}' skulle avslutte deklarasjon men fant '%1$S'.
+PEInaccessibleProperty2=Klarer ikke å spesifisere verdi for intern egenskap.
+PECommentEOF=slutt på kommentar
+SEUnterminatedString=Fant uavsluttet strengverdi '%1$S'.
+PEFontDescExpected=Forventet skrifttype-deskriptor men fant '%1$S'.
+PEUnknownFontDesc=Unkjent deskriptor '%1$S' i @font-face-regelen.
+PEMQExpectedExpressionStart=Forventet at '(' skulle starte mediaspørreuttrykk men fant '%1$S'.
+PEMQExpressionEOF=innhold i mediaspørreuttrykk
+PEMQExpectedFeatureName=Forventet mediafunksjonsnavn men fant '%1$S'.
+PEMQExpectedFeatureNameEnd=Forventet ':' eller ')' etter mediafunksjonsnavn men fant '%1$S'.
+PEMQNoMinMaxWithoutValue=Mediafunksjoner med min.- eller maks.- må ha en verdi.
+PEMQExpectedFeatureValue=Fant ugyldige verdier for mediafunksjon.
