--- a/nb-NO/toolkit/chrome/global-platform/unix/platformKeys.properties
+++ b/nb-NO/toolkit/chrome/global-platform/unix/platformKeys.properties
@@ -3,7 +3,7 @@
 #these are used in XP menus to show keyboard shortcuts
 
 #the shift key
-VK_SHIFT=Shift
+VK_SHIFT=Skift
 
 #the command key
 VK_META=Meta
