--- a/ca/mobile/chrome/search.properties
+++ b/ca/mobile/chrome/search.properties
@@ -1,25 +1,25 @@
-searchtip=Search using %S
+searchtip=Cerca utilitzant %S
 
-cmd_clearHistory=Clear Search History
-cmd_clearHistory_accesskey=C
+cmd_clearHistory=Neteja l'historial de cerca
+cmd_clearHistory_accesskey=j
 
-cmd_showSuggestions=Show Suggestions
-cmd_showSuggestions_accesskey=S
+cmd_showSuggestions=Mostra suggeriments
+cmd_showSuggestions_accesskey=s
 
-addEngineConfirmTitle=Add Search Engine
-addEngineConfirmation=Add "%S" to the list of engines available in the search bar?\n\nFrom: %S
-addEngineUseNowText=Start &using it right away
-addEngineAddButtonLabel=Add
+addEngineConfirmTitle=Afegeix un motor de cerca
+addEngineConfirmation=Voleu afegir «%S» a la llista de motors disponibles a la barra de cerca?\n\nDe: %S
+addEngineUseNowText=Inicia &utilitzant-lo a partir d'ara
+addEngineAddButtonLabel=Afegeix
 
-error_loading_engine_title=Download Error
+error_loading_engine_title=Error en la baixada
 # LOCALIZATION NOTE (error_loading_engine_msg2): %1$S = brandShortName, %2$S = location
-error_loading_engine_msg2=%S could not download the search plugin from:\n%S
-error_duplicate_engine_msg=%S could not install the search plugin from "%S" because an engine with the same name already exists.
+error_loading_engine_msg2=El %S no ha pogut baixar el connector de cerca de:\n%S
+error_duplicate_engine_msg=El %S no ha pogut instaŀlar el connector de cerca «%S» perquè ja existeix un motor amb el mateix nom.
 
-error_invalid_engine_title=Install Error
+error_invalid_engine_title=Error d'instaŀlació
 # LOCALIZATION NOTE (error_invalid_engine_msg): %S = brandShortName
-error_invalid_engine_msg=This search engine isn't supported by %S and can't be installed.
+error_invalid_engine_msg=El motor de cerca no funciona amb el %S i no podrà instaŀlar-se.
 
-cmd_addFoundEngine=Add "%S"
+cmd_addFoundEngine=Afegeix «%S»
 
-suggestion_label=Suggestions
+suggestion_label=Suggeriments
