Fixing minor Firefox localization bugs

--- a/de/browser/chrome/browser/pageInfo.properties
+++ b/de/browser/chrome/browser/pageInfo.properties
@@ -77,7 +77,7 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Diese Website bietet ein Zertifikat an, um ihre Identität zu bestätigen.
-securityNoIdentity=Diese Website bietet keine Informationen an, um ihre Identität zu bestätigen.
+securityCertText=Diese Website stellt ein Zertifikat zur Verfügung, um ihre Identität zu bestätigen.
+securityNoIdentity=Diese Website stellt keine Informationen zur Verfügung, um ihre Identität zu bestätigen.
 securityOneVisit=Ja, ein Mal
 securityNVisits=Ja, %S Mal
