--- a/de/browser/chrome/browser/shellservice.properties
+++ b/de/browser/chrome/browser/shellservice.properties
@@ -4,6 +4,6 @@ setDefaultBrowserTitle=Standardbrowser
 setDefaultBrowserMessage=%S ist momentan nicht als Ihr Standardbrowser festgelegt. Möchten Sie ihn zu Ihrem Standardbrowser machen?
 setDefaultBrowserDontAsk=Bei jedem Start von %S überprüfen
 alreadyDefaultBrowser=%S ist bereits als Ihr Standardbrowser festgelegt
-desktopBackgroundLeafNameWin=Desktop Hintergrund.bmp
+desktopBackgroundLeafNameWin=Desktop-Hintergrund.bmp
 DesktopBackgroundDownloading=Grafik wird gespeichert…
 DesktopBackgroundSet=Hintergrundbild einrichten
