Bug 353392 - If we're given the "unknown" proxy object (which indicates PAC isn't loaded yet), fail the connection attempt and retry it in a few seconds.

--- a/fr/extensions/irc/chrome/chatzilla.properties
+++ b/fr/extensions/irc/chrome/chatzilla.properties
@@ -780,6 +780,8 @@ msg.err.invalid.url   = « %S » n'est pas une URL valide ni un alias d'URL et
 msg.err.no.channel    = Pour exécuter la commande « %S », vous devez fournir un nom de salon ou exécuter la commande dans le contexte d'un salon.
 msg.err.no.idleservice = ChatZilla ne peut pas déterminer quand vous êtes absent avec votre version de &brandShortName;. La fonctionnalité d'absence automatique va être désactivée maintenant.
 
+msg.warn.pac.loading = Le fichier de configuration automatique de proxy n'a pas encore été chargé. ChatZilla essaiera de le charger à nouveau rapidement.
+
 # Specific bug messages.
 msg.bug318419.warning = ChatZilla a détecté une anomalie potentielle dans ses données internes. Vous ne serez plus en mesure d'envoyer quelque forme de communication que ce soit à ce moment, même s'il vous semble que cela fonctionne. Vous êtes très probablement une victime du Bug 318419 <https://bugzilla.mozilla.org/show_bug.cgi?id=318419>. Vous êtes très fortement enclin à redémarrer l'application (&brandShortName;) pour éviter tout problème.
 msg.bug318419.error   = ChatZilla a détecté une anomalie sérieuse dans ses données internes. Vous ne serez plus en mesure d'envoyer quelque forme de communication que ce soit à ce moment, même s'il vous semble que cela fonctionne. Vous êtes très probablement une victime du Bug 318419 <https://bugzilla.mozilla.org/show_bug.cgi?id=318419>. Vous DEVEZ redémarrer l'application (&brandShortName;) pour résoudre ce problème.
