--- a/fy-NL/browser/updater/updater.ini
+++ b/fy-NL/browser/updater/updater.ini
@@ -1,5 +1,5 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Programmafernijing
+TitleText=%MOZ_APP_DISPLAYNAME% fernijing
 InfoText=%MOZ_APP_DISPLAYNAME% is de fernijings oan it ynstallearjen en sil yn in amerijke starte...
 
