--- a/fy-NL/browser/chrome/browser/aboutRights.properties
+++ b/fy-NL/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
-buttonLabel = Ken jo rjochten…
+buttonLabel = Ken jo rjochten\u2026
 buttonAccessKey = K
-notifyText = %S is fergees en iepen software fan de non-profit Mozilla Foundation.
+notifyRightsText = %S is fergees en iepen boarne software fan de non-profit Mozilla Foundation.
