--- a/cs/mobile/chrome/browser.properties
+++ b/cs/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Přidat složku
+editBookmarkNewFolder=Nová složka
+
 # Popup Blocker
 popupWarning=Aplikace %S zabránila stránce otevřít vyskakovací okno.
 popupWarningMultiple=Aplikace %S zabránila stránce otevřít několik vyskakovacích oken.
