--- a/cs/suite/chrome/mailnews/messenger.properties
+++ b/cs/suite/chrome/mailnews/messenger.properties
@@ -332,8 +332,8 @@ attachmentDisplayNameFormat=%S %S
 103=Nelze se připojit k serveru %S; spojení bylo odmítnuto.
 104=Při pokusu o připojení na server %S vypršel čas.
 
-recipientSearchCriteria=Předmět nebo příjemce obsahuje:
-fromSearchCriteria=Předmět nebo Od obsahuje:
+searchRecipientEmptyText=Hledat předmět a příjemce
+searchFromEmptyText=Hledat předmět a od
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages
 biffNotification_message=má %1$S nových zpráv
