--- a/cs/browser/chrome/browser/aboutRights.properties
+++ b/cs/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
 buttonLabel=Znáte svá práva…
 buttonAccessKey=Z
-notifyText=%S je svobodný a otevřený software poskytovaný neziskovanou nadací Mozilla.
+notifyRightsText=%S je svobodný a otevřený software od neziskové nadace Mozilla Foundation.
