Bug 479784 - [de] Bringing together Firefox and Thundebird localizations (mail part)

--- a/de/mail/chrome/messenger/preferences/preferences.properties
+++ b/de/mail/chrome/messenger/preferences/preferences.properties
@@ -25,7 +25,7 @@ removeTitleSingle=Aktion entfernen
 removeTitleMultiple=Aktionen entfernen
 removeMessageSingle=Die ausgewählte Aktion wird bei den betroffenen Dateitypen nicht mehr ausgeführt.\n\nWollen Sie die Aktion wirklich entfernen?
 removeMessageMultiple=Die ausgewählten Aktionen werden bei den betroffenen Dateitypen nicht mehr ausgeführt.\n\nWollen Sie die Aktionen wirklich entfernen?
-fileEnding=%S Datei
+fileEnding=%S-Datei
 saveToDisk=Auf einem Datenträger speichern
 openWith=Öffnen mit %S
 actionsFiltered=Folgende Aktionen entsprechen Ihrer Suche:
@@ -33,7 +33,7 @@ actionsAll=Bei den folgenden Dateitypen wird automatisch die zugeordnete Aktion 
 
 #### Change Action
 extensionStringFormat=%S, %S
-fpTitleChooseApp=Anwendung wählen
+fpTitleChooseApp=Hilfsanwendung wählen
 fpTitleChooseDL=Download-Ordner auswählen
 
 #### Sound Notifications
