l10n for bug 480127 again (missing pref name change) - about:rights info bar should use "open source software" not "open software"

--- a/pl/mail/chrome/messenger/aboutRights.properties
+++ b/pl/mail/chrome/messenger/aboutRights.properties
@@ -1,4 +1,4 @@
 aboutRightsTitle = O prawach użytkownika
 buttonLabel      = Poznaj swoje prawa…
 buttonAccessKey  = P
-notifyText       = %S to wolne oprogramowanie o otwartym kodzie źródłowym tworzone przez Mozilla Foundation, organizację non-profit.
+notifyRightsText = %S to wolne oprogramowanie o otwartym kodzie źródłowym tworzone przez Mozilla Foundation, organizację non-profit.
