--- a/fr/mail/chrome/messenger/aboutRights.properties
+++ b/fr/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=À propos de vos droits
 buttonLabel = Vos droits…
 buttonAccessKey = V
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText = %S est un logiciel libre et ouvert de la fondation à but non-lucratif Mozilla Foundation.
+notifyRightsText=%S est un logiciel libre et open source de la fondation à but non-lucratif Mozilla Foundation.
