--- a/fr/browser/chrome/browser/aboutRights.properties
+++ b/fr/browser/chrome/browser/aboutRights.properties
@@ -1,3 +1,3 @@
-buttonLabel = Vos droits…
-buttonAccessKey = V
-notifyText = %S est un logiciel libre et ouvert de la fondation à but non-lucratif Mozilla Foundation.
+buttonLabel=Vos droits…
+buttonAccessKey=V
+notifyRightsText=%S est un logiciel libre et open source de la fondation à but non-lucratif Mozilla Foundation.
