Bug 357593 - PSM cannot display givenName and surname in DNs.

--- a/fr/security/manager/chrome/pipnss/pipnss.properties
+++ b/fr/security/manager/chrome/pipnss/pipnss.properties
@@ -121,6 +121,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Nom de famille
+CertDumpGivenName=Nom de baptême
 CertDumpValidity=Validité
 CertDumpNotBefore=Pas avant
 CertDumpNotAfter=Pas après
